[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/Ubuntu40.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/Ubuntu24.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/GlobeSectors.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://scripts/WasteParticles2D.gd" type="Script" id=5]
[ext_resource path="res://scripts/AgricultureParticles2D.gd" type="Script" id=6]
[ext_resource path="res://scripts/IndustryParticles2D.gd" type="Script" id=7]
[ext_resource path="res://sprites/200px-Circle_-_black_simple.svg.png" type="Texture" id=8]
[ext_resource path="res://scripts/ElectricityParticles2D.gd" type="Script" id=9]
[ext_resource path="res://scripts/Button.gd" type="Script" id=10]
[ext_resource path="res://sprites/13920061813626.png" type="Texture" id=11]
[ext_resource path="res://scripts/BuildingsParticles2D2.gd" type="Script" id=12]
[ext_resource path="res://scripts/TransportParticles2D.gd" type="Script" id=13]
[ext_resource path="res://scripts/PauseButtonSector.gd" type="Script" id=14]

[node name="SectorMode" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )

[node name="Sliders" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Sliders"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.376471, 0.721569, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentLine" type="Line2D" parent="Sliders"]
position = Vector2( 0, -48 )
points = PoolVector2Array( 75, 426, 545, 426 )
width = 2.0
default_color = Color( 0.6, 0.596078, 0.596078, 1 )

[node name="CurrentLabel" type="Label" parent="Sliders/CurrentLine"]
anchor_bottom = 1.0
margin_top = 398.0
margin_right = 93.0
margin_bottom = 457.0
hint_tooltip = "Drag to change emissions"
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Emissions 
  in 2020"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZeroLine" type="Line2D" parent="Sliders"]
points = PoolVector2Array( 75, 540, 545, 540 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="ZeroLabel" type="Label" parent="Sliders/ZeroLine"]
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 525.0
margin_right = 100.0
margin_bottom = 553.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElectricitySlider" type="VSlider" parent="Sliders"]
pause_mode = 2
margin_left = 90.0
margin_top = 300.0
margin_right = 140.0
margin_bottom = 550.0
hint_tooltip = "Carbon dioxide"
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
value = 70.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElectricityLabel" type="Button" parent="Sliders/ElectricitySlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -9.99998
margin_right = 52.0
margin_bottom = 40.0
hint_tooltip = "Electricity generation emits carbon dioxide, methane, and sulfate aerosols."
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Electricity"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndustrySlider" type="VSlider" parent="Sliders"]
pause_mode = 2
margin_left = 170.0
margin_top = 300.0
margin_right = 220.0
margin_bottom = 550.0
hint_tooltip = "Methane"
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
value = 70.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndustryLabel" type="Button" parent="Sliders/IndustrySlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 10.0
margin_right = 41.0
margin_bottom = 59.0
hint_tooltip = "Industry emits carbon dioxide, nitrous oxide, and sulfate aerosols"
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Industry"
flat = true

[node name="TransportationSlider" type="VSlider" parent="Sliders"]
pause_mode = 2
margin_left = 250.0
margin_top = 300.0
margin_right = 300.0
margin_bottom = 550.0
hint_tooltip = "Nitrous oxide"
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
value = 70.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransportationLabel" type="Button" parent="Sliders/TransportationSlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -9.99998
margin_right = 47.0
margin_bottom = 37.0
hint_tooltip = "Nitrous oxide emissions are from fertilizer use.  "
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Transport"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgricultureSlider" type="VSlider" parent="Sliders"]
pause_mode = 2
margin_left = 330.0
margin_top = 300.0
margin_right = 380.0
margin_bottom = 550.0
hint_tooltip = "Short-lived climate pollutants"
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
value = 70.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgricultureLabel" type="Button" parent="Sliders/AgricultureSlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = 10.0
margin_right = 65.0
margin_bottom = 55.0
hint_tooltip = "Agriculture/forestry emits carbon dioxide, methane and nitrous oxide."
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Agriculture"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingsSlider" type="VSlider" parent="Sliders"]
pause_mode = 2
margin_left = 410.0
margin_top = 300.0
margin_right = 460.0
margin_bottom = 550.0
hint_tooltip = "Short-lived climate pollutants"
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
value = 70.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingsLabel" type="Button" parent="Sliders/BuildingsSlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -9.99998
margin_right = 65.0
margin_bottom = 35.0001
hint_tooltip = "Agriculture/forestry emits carbon dioxide, methane and nitrous oxide."
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Buildings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WasteSlider" type="VSlider" parent="Sliders"]
pause_mode = 2
margin_left = 490.0
margin_top = 300.0
margin_right = 540.0
margin_bottom = 550.0
hint_tooltip = "Short-lived climate pollutants"
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
value = 70.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WasteLabel" type="Button" parent="Sliders/WasteSlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = 10.0
margin_right = 65.0
margin_bottom = 55.0
hint_tooltip = "Agriculture/forestry emits carbon dioxide, methane and nitrous oxide."
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waste"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Sliders"]
margin_right = 1024.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearTLabel" type="Label" parent="Sliders/HBoxContainer"]
margin_right = 157.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "  Year: 2020  
  F = 2.2 W/m2"

[node name="CO2TLabel" type="Label" parent="Sliders/HBoxContainer"]
margin_left = 161.0
margin_right = 368.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CO2 = 415 ppm  
FCO2 = 2.10 W/m2"

[node name="CH4TLabel" type="Label" parent="Sliders/HBoxContainer"]
margin_left = 372.0
margin_right = 577.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.647059, 0.164706, 0.164706, 1 )
text = "CH4 = 2.20 ppm  
FCH4 = 0.54 W/m2"

[node name="N2OTLabel" type="Label" parent="Sliders/HBoxContainer"]
margin_left = 581.0
margin_right = 790.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "N2O = 0.40 ppm  
FN2O = 0.20 W/m2"

[node name="AerTLabel" type="Label" parent="Sliders/HBoxContainer"]
margin_left = 794.0
margin_right = 964.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.513726, 0.513726, 0.513726, 1 )
text = "Aerosol cooling
  = -1.10 W/m2"

[node name="Button" type="Button" parent="Sliders"]
margin_left = 950.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.427451, 0.427451, 0.427451, 1 )
text = "Reset"
align = 0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="Sliders"]
pause_mode = 2
margin_left = 872.0
margin_top = 10.0
margin_right = 937.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.427451, 0.427451, 0.427451, 1 )
text = "Pause"
align = 0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Globe" type="Sprite" parent="."]
visible = false
position = Vector2( 842.838, 445.932 )
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="ElectricityParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 113.505, 304.03 )
amount = 17
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )

[node name="CH4Particles2D" type="CPUParticles2D" parent="ElectricityParticles2D"]
position = Vector2( 0, -2.687 )
amount = 5
lifetime = 2.0
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
scale_amount = 11.49
color = Color( 0.647059, 0.164706, 0.164706, 0.784314 )

[node name="SulfateParticles2D" type="CPUParticles2D" parent="ElectricityParticles2D"]
position = Vector2( 0, -2.687 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0.513726, 0.513726, 0.513726, 0.784314 )

[node name="IndustryParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 193, 298.657 )
amount = 10
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )

[node name="N2OParticles2D" type="CPUParticles2D" parent="IndustryParticles2D"]
position = Vector2( 0, 2.686 )
amount = 1
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 1, 0, 0, 1 )

[node name="SulfateParticles2D" type="CPUParticles2D" parent="IndustryParticles2D"]
position = Vector2( 0, 2.686 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0.513726, 0.513726, 0.513726, 0.784314 )

[node name="TransportParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 274.981, 300 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0, 0, 0, 1 )
script = ExtResource( 13 )

[node name="SulfateParticles2D" type="CPUParticles2D" parent="TransportParticles2D"]
position = Vector2( 0, 1.343 )
amount = 3
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0.513726, 0.513726, 0.513726, 0.784314 )

[node name="AgricultureParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 355, 301.343 )
amount = 5
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 6 )

[node name="CH4Particles2D" type="CPUParticles2D" parent="AgricultureParticles2D"]
amount = 4
lifetime = 2.0
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
scale_amount = 11.49
color = Color( 0.647059, 0.164706, 0.164706, 0.784314 )

[node name="N2OParticles2D" type="CPUParticles2D" parent="AgricultureParticles2D"]
amount = 4
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 1, 0, 0, 1 )

[node name="SulfateParticles2D" type="CPUParticles2D" parent="AgricultureParticles2D"]
amount = 2
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0.513726, 0.513726, 0.513726, 0.784314 )

[node name="BuildingsParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 435, 301.343 )
amount = 4
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 12 )

[node name="CH4Particles2D3" type="CPUParticles2D" parent="BuildingsParticles2D"]
amount = 1
lifetime = 2.0
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
scale_amount = 11.49
color = Color( 0.647059, 0.164706, 0.164706, 0.784314 )

[node name="SulfateParticles2D" type="CPUParticles2D" parent="BuildingsParticles2D"]
amount = 3
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
scale_amount = 11.49
color = Color( 0.513726, 0.513726, 0.513726, 0.784314 )

[node name="WasteParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 515, 301.343 )
amount = 2
lifetime = 2.0
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
scale_amount = 11.49
color = Color( 0.647059, 0.164706, 0.164706, 0.784314 )
script = ExtResource( 5 )

[node name="10 C" type="Line2D" parent="."]
position = Vector2( 800, 450 )
points = PoolVector2Array( -20, 0, 60, 0 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="10C label" type="Label" parent="10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 60.0
margin_top = -12.0
margin_right = 104.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 1.0 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15C label" type="Label" parent="10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 60.0
margin_top = -62.0
margin_right = 160.0
margin_bottom = -13.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 1.5 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="20C label" type="Label" parent="10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 60.0
margin_top = -112.0
margin_right = 104.0
margin_bottom = -89.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 2.0 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="25C label" type="Label" parent="10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 60.0
margin_top = -162.0
margin_right = 104.0
margin_bottom = -139.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 2.5 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="30C label" type="Label" parent="10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 60.0
margin_top = -212.0
margin_right = 104.0
margin_bottom = -189.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 3.0 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15 C" type="Line2D" parent="."]
position = Vector2( 800, 450 )
points = PoolVector2Array( -20, -50, 60, -50 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="20 C" type="Line2D" parent="."]
position = Vector2( 800, 450 )
points = PoolVector2Array( -20, -100, 60, -100 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="25 C" type="Line2D" parent="."]
position = Vector2( 800, 450 )
points = PoolVector2Array( -20, -150, 60, -150 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="30 C" type="Line2D" parent="."]
position = Vector2( 800, 450 )
points = PoolVector2Array( -20, -200, 60, -200 )
width = 6.0
default_color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 820, 555.439 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="TempRect" type="ColorRect" parent="."]
anchor_bottom = 40.0
margin_left = 800.0
margin_top = 450.0
margin_right = 840.0
margin_bottom = 550.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TTLabel" type="Label" parent="TempRect"]
margin_left = -170.0
margin_top = -20.0
margin_right = -30.0
margin_bottom = 57.0
hint_tooltip = "Warming since preindustrial"
mouse_filter = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "T = 1.0 K 
Td = 0.3 K"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForcingBox" type="VBoxContainer" parent="."]
margin_top = 65.0
margin_right = 590.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CO2Rect" type="ColorRect" parent="ForcingBox"]
margin_right = 590.0
hint_tooltip = "Carbon dioxide forcing = 2.2 W/m2"
mouse_filter = 1
color = Color( 0, 0, 0, 0.784314 )

[node name="CH4Rect" type="ColorRect" parent="ForcingBox"]
margin_top = 4.0
margin_right = 590.0
margin_bottom = 4.0
grow_vertical = 0
hint_tooltip = "Methane forcing = 0.54 W/m2"
mouse_filter = 1
color = Color( 0.647059, 0.164706, 0.164706, 0.784314 )

[node name="N2ORect" type="ColorRect" parent="ForcingBox"]
margin_top = 8.0
margin_right = 590.0
margin_bottom = 8.0
hint_tooltip = "Nitrous oxide forcing = 0.2 W/m2"
mouse_filter = 1
color = Color( 1, 0, 0, 0.784314 )

[node name="ForcingBox2" type="VBoxContainer" parent="."]
margin_left = 590.0
margin_top = 65.0
margin_right = 1024.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AerRect" type="ColorRect" parent="ForcingBox2"]
margin_right = 434.0
hint_tooltip = "Aerosol radiative forcing = -1.1 W/m2"
mouse_filter = 1
color = Color( 0.45098, 0.45098, 0.45098, 0.784314 )
[connection signal="value_changed" from="Sliders/ElectricitySlider" to="ElectricityParticles2D" method="_on_ElectricitySlider_value_changed"]
[connection signal="value_changed" from="Sliders/IndustrySlider" to="IndustryParticles2D" method="_on_IndustrySlider_value_changed"]
[connection signal="value_changed" from="Sliders/TransportationSlider" to="TransportParticles2D" method="_on_TransportationSlider_value_changed"]
[connection signal="value_changed" from="Sliders/AgricultureSlider" to="AgricultureParticles2D" method="_on_AgricultureSlider_value_changed"]
[connection signal="value_changed" from="Sliders/BuildingsSlider" to="BuildingsParticles2D" method="_on_BuildingsSlider_value_changed"]
[connection signal="value_changed" from="Sliders/WasteSlider" to="WasteParticles2D" method="_on_WasteSlider_value_changed"]
[connection signal="pressed" from="Sliders/Button" to="Sliders/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Sliders/PauseButton" to="Sliders/PauseButton" method="_on_PauseButton_pressed"]
